Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-42067

Quick Controls Gallery example looks bad on Yosemite

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.4.0, 5.4.1
    • 5.4.0 Beta
    • Quick: Controls 1
    • None

      See attached screenshot. Some buttons are misaligned. The text in some of the controls feels misaligned too. And what is that with the letter t in the Itemviews tab title?

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            dedietri Gabriel de Dietrich (drgvond)
            lagocs Laszlo Agocs
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes